Launch4J was integrated in JexePackExample project.